--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Homework 11</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -18,6 +17,7 @@
       <button type="submit">Search</button>
     </form>
     <div class="gallery"></div>
-    <script class="btn-form" src="index.js" type="module"></script>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
